Add refactor HW05 solution + optional